Removed some warnings